# BA_XAI_for_LLMs

./: .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  llamaModel.py  pyproject.toml  server.py  shap_on_llama.py  umfrageEntwurf.md
pa_trustworthy_ai_latex/: doc.bib  doc.tex  preamble.tex
pa_trustworthy_ai_latex/parts/: 05_theoretical_background.tex  08_discussion_and_outlook.tex  09_references.tex  10_appendix.tex
server_v2/: index.html  server.py
servertest/: index.html  server.py
src/: cot_on_llama.py  shap_on_llama.py  umfrageEntwurf.md
