[project]
name = "ba-xai-for-llms"
version = "0.1.0"
description = ""

readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "unsloth>=2026.2.1,<2027.0.0",
    "transformers>=4.51.3,<4.58.0",
    "torch==2.8.0+cu126",
    "torchaudio==2.8.0+cu126",
    "torchvision==0.23.0+cu126",
    "torchao==0.14.0",
    "matplotlib>=3.10.8,<4.0.0",
    "numpy>=2.4.2,<3.0.0",
    "shap (>=0.50.0,<0.51.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "fastapi (>=0.134.0,<0.135.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)"
]

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
priority = "supplemental"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu126"
priority = "supplemental"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
